syntax = "proto3";

package si;
option java_package = "de.fhaachen.si.web.shop.grpc";
option java_multiple_files = true;

service Stock {
  rpc GetStock (StockRequest) returns (StockResponse);
}

message StockRequest {
  string item_id = 1;
}

message StockResponse {
  int32 quantity = 1;
}

// Order service definition
service Order {
  rpc CreateOrder (OrderRequest) returns (OrderResponse);
  rpc GetOrderById (OrderIdRequest) returns (OrderResponse);
  rpc ChangeOrderStatus (OrderStatusRequest) returns (OrderResponse);
}

// ---- Messages ----

message OrderRequest {
  string customer_id = 1;
  string order_date = 2;
  double order_amount = 3;
  string currency = 4;
  repeated OrderItem items = 5;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  double item_amount = 3;
  string currency = 4;
}

message OrderResponse {
  string order_id = 1;
  string status = 2;
  double total_amount = 3;
  string currency = 4;
}

message OrderIdRequest {
  string order_id = 1;
}

message OrderStatusRequest {
  string order_id = 1;
  string new_status = 2;
}

service Product {
  rpc GetAllProducts (Empty) returns (ProductList);
  rpc GetProductById (ProductIdRequest) returns (ProductResponse);
  rpc CreateProduct (ProductRequest) returns (ProductResponse);
  rpc UpdateProduct (ProductRequest) returns (ProductResponse);
  rpc DeleteProduct (ProductIdRequest) returns (DeleteResponse);
}

message Empty {}

message ProductIdRequest {
  string id = 1;
}

message ProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string currency = 5;
  int32 stock = 6;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string currency = 5;
  int32 stock = 6;
}

message ProductList {
  repeated ProductResponse products = 1;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}
